<resources>
    <string name="app_name">AutiLearner</string>
    <string name="activity_main">Main</string>
    <string name="activity_auth">Auth</string>
    <string name="activity_emotion_lessons">Lessons in Learn Emotion</string>
    <string name="activity_lesson">Lesson</string>
    <string name="activity_result">Result</string>
    <string name="activity_learnNplay_lessons">Lessons in Learn And Play</string>
    <string name="activity_play_music">Play Music</string>
    <string name="activity_lets_have_fun">Let\'s Have Fun</string>
    <string name="activity_social_story">Social Story</string>
    <string name="tagline">The new, fun platform for your special needs child!</string>
    <string name="back_button_twice_to_exit">Press Back Again to Exit App</string>
    <string name="social_story">"Look at the pictures below. Decide how does he/she feels. Then, finish the story using one of the pictures from the option."</string>
    <string name="web_client_id">754874453404-f9v5tv4sh7cb1jrubjl6ptg6hv3ivea0.apps.googleusercontent.com</string>
    <string name="learn_and_play">Learn &amp; Play</string>
    <string name="lets_have_fun">Let\'s Have Fun</string>
    <string name="learn_emotion">Learn Emotion</string>
    <string name="play_music">Play Music</string>
    <string name="lesson1_paragraph">Let\'s learn about our emotions. Understanding emotions will help you get along with others. Let\'s begin our journey!</string>
    <string name="ExitPrompt">Do You Want to Exit? All Progress Will Be Lost!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="emotion_lesson_heading">This is Bob! \nGuess how is Bob feeling today.</string>
    <string name="a_to_z_heading">Guess the option that starts with the given letter</string>
    <string name="animals_lesson_heading">Guess the name of the animal</string>
    <string name="shapes_lesson_heading">Guess the name of the shape</string>
    <string name="correct_answer" formatted="true">"Correct Answer!\nAnswer is: %s"</string>
    <string name="wrong_answer" formatted="true">"Wrong Answer!\nAnswer is: %s"</string>
    <string name="result_heading">Results</string>
    <string name="good_work">Good Work!</string>
    <string name="result_message">You made it to the end of this lesson. Keep practising for a perfect score.</string>
    <string name="your_score">Your Score:</string>
    <string name="social_emotional_regulation">Social Emotional Regulation</string>
    <string name="the_meltdown_monster">The Meltdown Monster</string>
    <string name="social_story_text">Swipe right and left to see the story</string>
    <string name="back_button_twice_to_background">Press Again to Move App to Background</string>
    <string name="learn_amp_play"><![CDATA[Learn & Play]]></string>
    <string name="pick_a_category">Pick a category</string>
    <string name="learn_a_z">Learn A-Z</string>
    <string name="learn_shapes">Learn Shapes</string>
    <string name="learn_animals">Learn Animals</string>
    <string name="learn_emotion_text">Learn Emotion</string>
    <string name="lesson_1">Lesson 1</string>
    <string name="lesson_2">Lesson 2</string>
    <string name="lesson_3">Lesson 3</string>
    <string name="lesson_4">Lesson 4</string>
    <string name="social_story_card_text">Social Story</string>
    <string name="pick_a_category_text">Pick a category</string>
    <string name="learn_and_play_description">learn_and_play</string>
    <string name="lets_have_fun_description">lets_have_fun</string>
    <string name="learn_emotion_description">learn_emotion</string>
    <string name="play_music_description">play_music</string>
    <string name="Enter">Enter</string>
    <string name="Play">Play</string>
    <string name="PlayByAlphabet">Play By Alphabet</string>
    <string name="Alphabet">Alphabet</string>
    <string name="Tone">Tone</string>
    <string name="button_description" />
    <string name="a">a</string>
    <string name="b">b</string>
    <string name="c">c</string>
    <string name="d">d</string>
    <string name="e">e</string>
    <string name="f">f</string>
    <string name="g">g</string>
    <string name="h">h</string>
    <string name="i">i</string>
    <string name="j">j</string>
    <string name="k">k</string>
    <string name="l">l</string>
    <string name="m">m</string>
    <string name="n">n</string>
    <string name="o">o</string>
    <string name="p">p</string>
    <string name="q">q</string>
    <string name="r">r</string>
    <string name="s">s</string>
    <string name="t">t</string>
    <string name="u">u</string>
    <string name="v">v</string>
    <string name="w">w</string>
    <string name="x">x</string>
    <string name="y">y</string>
    <string name="z">z</string>
    <string name="Heading">Welcome to Tic-Tac-Toe</string>
    <string name="grid">this is grid</string>
    <string name="status">X\'s turn - tap to play</string>
    <string name="buttonExit">Exit</string>
    <string name="buttonNextRound">Next Round</string>
</resources>