<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        style="@style/NormalText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ExitPrompt"/>

    <Button
        android:id="@+id/moveHomeButton"
        style="@style/secondaryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yes"/>

    <Button
        android:id="@+id/continueButton"
        style="@style/primaryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no" />

</LinearLayout>
