<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/powderBlue"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".learn_emotion.LearnEmotionActivity" >

    <TextView
        android:id="@+id/emotion_start_learning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif"
        android:text="@string/learn_emotion_text"
        android:textColor="@color/primaryDarkColor"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/emotion_banner"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/learn_emotion_banner"
        android:scaleType="fitXY"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emotion_start_learning" />

    <TextView
        android:id="@+id/learn_emotion_paragraph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/lesson1_paragraph"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:paddingHorizontal="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emotion_banner"
        app:layout_constraintBottom_toTopOf="@id/emotion_lesson1" />


    <Button
        android:id="@+id/emotion_lesson1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:width="200dp"
        android:height="60dp"
        android:backgroundTint="@color/primaryColor"
        android:elevation="10dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/lesson_1"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/learn_emotion_paragraph" />

    <Button
        android:id="@+id/emotion_lesson2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:width="200dp"
        android:height="60dp"
        android:backgroundTint="@color/primaryColor"
        android:elevation="10dp"
        android:text="@string/lesson_2"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emotion_lesson1" />

    <Button
        android:id="@+id/emotion_lesson3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:width="200dp"
        android:height="60dp"
        android:elevation="10dp"
        android:backgroundTint="@color/primaryColor"
        android:text="@string/lesson_3"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emotion_lesson2" />

    <Button
        android:id="@+id/emotion_lesson4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:width="200dp"
        android:height="60dp"
        android:backgroundTint="@color/primaryColor"
        android:elevation="10dp"
        android:text="@string/lesson_4"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emotion_lesson3" />

    <Button
        android:id="@+id/emotion_social_story"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:width="200dp"
        android:height="60dp"
        android:backgroundTint="@color/secondaryColor"
        android:elevation="10dp"
        android:text="@string/social_story_card_text"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emotion_lesson4" />

</androidx.constraintlayout.widget.ConstraintLayout>