<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/powderBlue"
    android:layout_gravity="center_horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/primaryTextColor"
        android:textSize="17sp"
        android:padding="5dp"
        android:gravity="center"
        android:text="@string/ExitPrompt" />

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:gravity="center">

        <Button
            android:id="@+id/moveHomeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:textColor="@color/white"
            android:backgroundTint="@color/primaryColor"
            android:elevation="10dp"
            android:padding="10dp" />

        <View
            android:layout_width="30dp"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/continueButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:textColor="@color/white"
            android:backgroundTint="@color/secondaryColor"
            android:elevation="10dp"
            android:padding="10dp" />

    </LinearLayout>

</LinearLayout>