<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".learn_emotion.ResultActivity">

    <LinearLayout
        android:id="@+id/result_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:src="@drawable/exam" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/result_heading"
            android:textSize="30sp"
            android:textColor="@color/secondaryDarkColor"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:id="@+id/result_image"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:src="@drawable/celebration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/result_heading" />

    <TextView
        android:id="@+id/result_subheading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/good_work"
        android:textColor="@color/primaryColor"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result_image" />

    <TextView
        android:id="@+id/result_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/result_message"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/result_subheading"
        android:textAlignment="center" />

        <TextView
            android:id="@+id/your_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/your_score"
            android:textSize="35sp"
            android:textColor="@color/primaryColor"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/result_text" />

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="35sp"
            android:textColor="@color/primaryColor"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/your_score" />

    <Button
        android:id="@+id/back_to_home"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:background="@drawable/home"
        android:layout_marginTop="10dp"
        android:elevation="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/score"/>


</androidx.constraintlayout.widget.ConstraintLayout>