<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/powderBlue"
    tools:context=".lets_have_fun.LetsHaveFunActivity">

    <Button
        android:id="@+id/buttonNextRound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buttonNextRound"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/status"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView10"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/primaryDarkColor"
        android:text="@string/Heading"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/grid"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:srcCompat="@drawable/grid2" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="384dp"
        android:layout_height="400dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/imageView10"
        app:layout_constraintEnd_toEndOf="@+id/imageView10"
        app:layout_constraintStart_toStartOf="@+id/imageView10"
        app:layout_constraintTop_toTopOf="@+id/imageView10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/t1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="20sp"
                android:tag="0"
                android:onClick="playerTap"
                tools:ignore="ContentDescription,NestedWeights,SpeakableTextPresentCheck,UsingOnClickInXml" />
            <ImageView
                android:id="@+id/t2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="20sp"
                android:tag="1"
                android:onClick="playerTap"
                tools:ignore="ContentDescription,SpeakableTextPresentCheck,UsingOnClickInXml" />

            <ImageView
                android:id="@+id/t3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="20sp"
                android:tag="2"
                android:onClick="playerTap"
                tools:ignore="ContentDescription,SpeakableTextPresentCheck,UsingOnClickInXml" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/t4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="20sp"
                android:tag="3"
                android:onClick="playerTap"
                tools:ignore="ContentDescription,NestedWeights,SpeakableTextPresentCheck,UsingOnClickInXml" />

            <ImageView
                android:id="@+id/t5"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="20sp"
                android:tag="4"
                android:onClick="playerTap"
                tools:ignore="ContentDescription,SpeakableTextPresentCheck,UsingOnClickInXml" />

            <ImageView
                android:id="@+id/t6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="20sp"
                android:tag="5"
                android:onClick="playerTap"
                tools:ignore="ContentDescription,SpeakableTextPresentCheck,UsingOnClickInXml" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/t7"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="20sp"
                android:tag="6"
                android:onClick="playerTap"
                tools:ignore="ContentDescription,NestedWeights,SpeakableTextPresentCheck,UsingOnClickInXml" />

            <ImageView
                android:id="@+id/t8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="20sp"
                android:tag="7"
                android:onClick="playerTap"
                tools:ignore="ContentDescription,SpeakableTextPresentCheck,UsingOnClickInXml" />

            <ImageView
                android:id="@+id/t9"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:padding="20sp"
                android:tag="8"
                android:onClick="playerTap"
                tools:ignore="ContentDescription,SpeakableTextPresentCheck,UsingOnClickInXml" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:text="@string/status"
        android:textStyle="italic"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>